--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <div class="container">
+      <div class="weather-app">
       <h1>New York</h1>
       <ul>
         <li>Friday 05:00</li>
@@ -41,6 +42,10 @@
           >Open-source code</a
           >, by Justyna Bacela
       </small>
+    </div>
+    
+  </div>
+     
     </div>
     <script src="src/app.js"></script>
   </body>
