--- a/index.html
+++ b/index.html
@@ -19,22 +19,34 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
+          <form id="search-form" class="mb-3">
+            <div class="row">
+               <div class="col-9">
+            <input
+              type="search"
+              placeholder="Type a city..."
+              class="form-control"
+              id = "city-input"
+              autocomplete="off"
+            />
+          </div>
+          <div class="col-3">
+            <input type="submit" value="Search" class="btn btn-primary w-100" />
+          </div>
+          </div>
+          </form>
+
           <div class="overview">
-            <h1 id = "city"></h1>
+            <h1 id="city"></h1>
             <ul>
-              <li> Last updated: <span id = "date"></span></li>
-              <li id = "description"></li>
+              <li>Last updated: <span id="date"></span></li>
+              <li id="description"></li>
             </ul>
           </div>
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img
-                  src=""
-                  alt="Partly cloudy"
-                  id = "icon"
-                  class="float-left"
-                />
+                <img src="" alt="Partly cloudy" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong>
                   <span class="units">°C | °F</span>
@@ -43,8 +55,8 @@
             </div>
             <div class="col-6">
               <ul>
-                <li>Humidity: <span id = "humidity"></span> %</li>
-                <li>Wind: <span id = "windSpeed"></span> km/h</li>
+                <li>Humidity: <span id="humidity"></span> %</li>
+                <li>Wind: <span id="windSpeed"></span> km/h</li>
               </ul>
             </div>
           </div>
